manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibre-from-address
  labels:
    app: fibre-from-address
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibre-from-address
  template:
    metadata:
      labels:
        app: fibre-from-address
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: fibre-from-address
        image: ghcr.io/abc10946/fibre_from_address:0.3.2
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 2
            memory: 4096Mi
          requests:
            cpu: 1
            memory: 2048Mi
